testdata/bad/timestamp_38.ion
2004-12-11T12:10-100:10
